(core) Fix unreadable text in dark mode
Summary:
The message shown in a linked widget when no row is
selected was unreadable in dark mode.

Test Plan: Manual.

Reviewers: jarek

Reviewed By: jarek

Differential Revision: https://phab.getgrist.com/D4019

--- a/app/client/components/ViewLayout.css
+++ b/app/client/components/ViewLayout.css
@@ -127,6 +127,7 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  color: var(--grist-theme-text-light, var(--grist-color-slate));
   background-color: rgba(0, 0, 0, 0.1);
   font-size: 12pt;
 }
